<resources>
    <string name="app_name">health_stat</string>
    <string name="water_header">WATER</string>
    <string name="calories_header">CALORIES</string>
    <string name="sleep_dashboard">SLEEP</string>
    <string name="overview_dashboard">OVERVIEW</string>
    <string name="detail_cardio">CARDIO</string>
    <string name="calories_dashboard">CALORIES</string>
    <string name="water_dashboard">WATER</string>
    <string name="cardio_dashboard">CARDIO</string>
    <string name="profile_picture">profile_picture</string>
    <string name="dashboard_water_goal">Goal: 2.5L</string>
    <string name="dashboard_calories_goal">Goal: 600 CALORIES</string>
    <string name="dashboard_sleep_goal">Goal: 8 HOURS</string>
    <string name="cardio_daily_progress">DAILY PROGRESS</string>
    <string name="cardio_weekly_progress">WEEKLY PROGRESS</string>
    <string name="rainbow_test">RAINBOW</string>
</resources>
